<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/debts"
            android:textColor="#fff"
            android:textSize="40sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            style="@style/FieldStyle"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/hname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hname"
                android:textColor="#fff"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/addName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="#A7A7A7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hdebt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hdebt"
                android:textColor="#fff"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/addDebt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/debt"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#fff"
                android:textColorHint="#A7A7A7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/hCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/currency"
                android:textColor="#fff"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/corner"
            android:onClick="onAddClick"
            android:text="@string/Add"
            android:textColor="#fff" />
    </FrameLayout>

</LinearLayout>