<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/debt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hname"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/debt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Долг"
                android:textColor="#fff"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:background="@drawable/light_corner"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:background="@drawable/light_corner"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>